radio - checkbox add

--- a/index.html
+++ b/index.html
@@ -62,26 +62,26 @@
             <div class="orta-cnt">
                 <label for="movie">Movie Type</label>
                 <br>
-                <input type="checkbox" name="comedy" id="comedy" checked>
+                <input type="checkbox" name="movie" id="comedy" checked>
                 <label for="comedy">Comedy</label>
                 <br>
-                <input type="checkbox" name="action" id="action" >
+                <input type="checkbox" name="movie" id="action" >
                 <label for="action">Action</label>
                 <br>
-                <input type="checkbox" name="romantic" id="romantic" checked >
+                <input type="checkbox" name="movie" id="romantic" checked >
                 <label for="romantic">Romantic</label>
 
             </div>
             <div class="orta2-cnt">
                 <label for="gender">Gender</label>
                 <br>
-                <input type="radio" name="male" id="male" >
+                <input type="radio" name="gender" id="male" value="male" >
                 <label for="male">Male</label>
                 <br>
-                <input type="radio" name="female" id="female" checked >
+                <input type="radio" name="gender" id="female" value="female" checked >
                 <label for="femela">Female</label>
                 <br>
-                <input type="radio" name="other" id="other" >
+                <input type="radio" name="gender" id="other" value="other" >
                 <label for="other">Other</label>
 
             </div>
